# SISmanager

./: .dockerignore  .gitignore  AUDIT_INDEX.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  Dockerfile  IMPORTER_IMPROVEMENTS.md  QUICK_WINS.md  README.md  RECOMMENDED_ISSUES.md  docker-compose.yml  lint.sh  pyproject.toml  run.py  test.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: importer_api.md
sismanager/: __init__.py
sismanager/blueprints/calendar/: __init__.py  routes.py
sismanager/blueprints/db_viewer/: __init__.py  routes.py
sismanager/blueprints/importer/: __init__.py  routes.py  routes_clean.py  routes_new.py  routes_old.py  routes_simplified.py
sismanager/blueprints/main/: __init__.py  routes.py
sismanager/blueprints/materials/: __init__.py  routes.py
sismanager/blueprints/money/: __init__.py  routes.py
sismanager/scripts/: run_xlsx_to_centraldb.py
sismanager/services/: file_manager.py  importer_service.py
sismanager/services/inout/: backup_service.py  central_db_service.py  xlsx_importer_service.py
sismanager/static/css/: calendar.css  dashboard.css  (+1 more)
sismanager/templates/: base.html
src/: backup.py  central_db_repository.py  config.py  run_xlsx_to_centraldb.py  xlsx_importer.py
tests/: __init__.py  conftest.py  test_importer_simplified.py
tests/fixtures/: sample_data.csv  sample_import.xlsx  sample_with_duplicates.csv
tests/integration/: OUTDATED_API_TESTS.md  test_importer_api.py  test_workflows.py
tests/unit/: test_backup_manager.py  test_central_db_repository.py  test_config.py  test_xlsx_importer.py
(+11 files in other folders)
